--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         </section>
       </aside>
       <main class="mainContent" id="idMain">
-        <header>
+        <header id="headerTag">
           <h1>Buenos dias</h1>
         </header>
         <article class="bodyOfContent">
