--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
             </div> -->
           </div>
           <div class="biblio-footer">
+            <button id="cerrarSesionBtn">
+              Cerrar sesión
+            </button>
               <ul class="legalThings">
                 <li class="item"><a href="#" target="_blank">Legal</a></li>
                 <li class="item"><a href="#" target="_blank">Centro de privacidad</a></li>
